# robmon

./: .gitignore  Cargo.toml  FUTURE_MAP.md  LICENSE  MESH_VPN_PLAN.md  README.md  docker-compose.yml
agent/: .dockerignore  Cargo.toml  Dockerfile
agent/src/: api.rs  command.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  state.rs
agent/tests/: commands.rs  config.rs  errors.rs  metrics.rs  models_serde.rs  state.rs
agent/tests/common/: mod.rs
control-plane/: Dockerfile  package-lock.json  package.json  server.js
control-plane/test/: auth-login.test.js
frontend/: robots.js
web/: Dockerfile  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
