[package]
name = "robmon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "process"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.33", features = ["serde"] }
directories = "5.0"
uuid = { version = "1.4", features = ["v4"] }
hostname = "0.4"
chrono = { version = "0.4", features = ["serde", "alloc"] }
log = "0.4"
env_logger = "0.10"
